# template_builder

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  errori_terminale_dopo_1_batch_test.txt  project-files.txt  pyproject.toml  pytest.ini  tree-project-root.md
.github/workflows/: ci.yaml  python-app.yml
docs/: DEV_PLAN_B2.md  How to Contribute.md  How to Install.md  How to Run.md  IMPACT_MATRIX_B2.md  INTEGRATION_GUIDE_B2.md  MODULE_PROPOSAL_GalleryRow.md  PRECAUTION_CHECKLIST_B2.md  ROADMAP.md  Task-Tracker_fase-Batch-1–fix-verde-clean.md  legacy_issues.md  requirements.txt  stato attuale del repository-template_builder-ven-6-giugno-2025.docx
legacy/: mapping_template_builder_legacy.csv  template_builder_legacy.py  test_placeholders_legacy.py  validators_legacy.py
scripts/: legacy_coverage_check.py
template_builder/: __init__.py  __main__.py  assets.py  builder_core.py  builder_core_da_validare.py  filters.py  model.py  step_image.py  widgets.py
tests/: test_assets.py  test_audit_placeholders.py  test_builder_core.py  test_builder_core_collect.py  test_builder_import.py  test_cli.py  test_dnd_images.py  test_filters.py  test_images.py  test_images_service.py  test_live_validation.py  test_model.py  test_placeholders.py  test_preview_engine.py  test_regression.py  test_smart_scroll.py  test_step_image.py  test_step_image_bind_alts.py  test_step_image_helpers.py  test_storage_migration.py  test_storage_service.py  test_text.py  test_text_service.py  test_tooltips.py  test_ui_utils.py  test_undo_redo_ui.py  test_widgets.py  test_widgets_alt.py
(+34 files in other folders)
